# vital-expert-platform

./: .claude.md  .coverage  .cursorrules  .env.example  .env.local.backup2  .env.local.template  .env.neo4j.example  .eslintrc.js  .gitignore  .npmrc  .prettierrc  .vercel-force-rebuild  ADD_MISSING_TABLES_INSTRUCTIONS.md  ADD_PANEL_TEMPLATES_GUIDE.md  ADD_SECOND_SUPERADMIN.sql  ADMIN_AGENT_ANALYTICS_SETUP.md  ADMIN_CLOUD_SETUP.md  AGENT-IMPORT-README.md  AGENTOS_3.0_FIVE_LEVEL_AGENT_HIERARCHY.md  AGENTS_COMPLETE_INVENTORY.md  AGENTS_DATABASE_STATUS.md  AGENTS_GRAPHRAG_IMPLEMENTATION.md  AGENTS_NOT_LOADING_DEBUG.md  AGENTS_SETUP.md  AGENTS_SYNC_COMPLETE.md  AGENT_AVATAR_CONSISTENCY.md  AGENT_CATEGORY_COLOR_SYSTEM.md  AGENT_FILES_ANALYSIS_REPORT.md  AGENT_ID_COMPLETE_AUDIT.md  AGENT_KNOWLEDGE_RELATIONS_ANALYSIS.md  AGENT_LOADING_SUCCESS.md  AGENT_MAPPING_FIX_COMPLETE.md  AGENT_SCHEMA_DIAGRAM.md  AGENT_SCHEMA_QUICK_REFERENCE.md  AGENT_SELECTION_BUG_FIXED.md  AGENT_UPDATE_UX_IMPROVEMENTS.md  AGENT_UPGRADE_SUMMARY.md  AGENT_USER_ID_AUDIT_COMPLETE.md  AI_ASSISTANT_COLLAPSED.md  AI_BUTTON_QUICK_GUIDE.md  (+825 more)
.claude/: AGENT_QUICK_START.md  CATALOGUE.md  CLAUDE.md  CONSOLIDATION_COMPLETE.md  DOCUMENTATION_GOVERNANCE_PLAN.md  EVIDENCE_BASED_RULES.md  GOVERNANCE_IMPLEMENTATION_SUMMARY.md  INDEX.md  MASTER_DOCUMENTATION_INDEX.md  NAMING_CONVENTION.md  README.md  ROOT_CAUSE_ANALYSIS_OLD_FRONTEND_SERVICES.md  STANDARDIZATION_COMPLETE.md  STRUCTURE.md  VITAL.md
.cursor/: commands.md  context.md  progress.md  rules
.env-configs/: README.md  restore-env-files.sh
.vital-cockpit/: CONSOLIDATION_PLAN.md  DOCUMENTATION_MAP.md  INDEX.md  QUICK_REFERENCE.md  settings.local.json
.vital-command-center/: ASK_EXPERT_PRD_UPDATE_2025-11-22.md  CATALOGUE.md  COMPREHENSIVE_DOCUMENTATION_COMPLETE.md  DOCUMENTATION_PRESERVATION_COMPLETE.md  EXECUTION_PLAN.md  GOLD_STANDARD_RESTRUCTURE_COMPLETE.md  PRD_INTEGRATION_GUIDE.md  PRD_UPDATE_PHASE1_2025-11-22.md  PRESERVATION_VERIFICATION_REPORT.md  QUICK_START.md  README.md  RESTRUCTURE_COMPLETE.md
.vital-docs/: KNOWLEDGE_BUILDER_DATA_STRATEGY.md  KNOWLEDGE_BUILDER_RESEARCH_REPORT.md  MULTI_TENANT_AGENT_MIGRATION.md  _ORGANIZATION_COMPLETE.md
MA001 PRD ARD/: START_HERE.md  cursor_ai_advanced_prompts.md  cursor_one_page_cheatsheet.md  cursor_simple_execution_plan.md
app/: globals.css  layout.tsx  page.tsx
apps/python-services/: pyproject.toml
apps/python-services/agents/: clinical_researcher.py  medical_specialist.py  regulatory_expert.py
apps/python-services/core/: websocket_manager.py
apps/python-services/src/core/consensus/: AdvancedConsensusBuilder.ts
apps/python-services/src/orchestration/: master_orchestrator.py
apps/python-services/src/services/: clinical_agent_registry.py
archive/: CONSOLIDATION_SUMMARY.md  README.md
backend/: middleware.ts
components-disabled/: avatar-picker-modal.tsx
config/: .eslintrc.json  organizational-structure.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
data/: agents-comprehensive.json  dh_jtbd_library_20251108_191724.json  dh_jtbd_library_20251108_191724.sql  dh_jtbd_library_20251108_191829.json  dh_jtbd_library_20251108_191829.sql  dh_jtbd_library_enhanced_20251108_192510.json  dh_jtbd_library_enhanced_20251108_192510.sql  knowledge_domains.json  persona_master_catalogue_20251108_204641.json  phase2_all_jtbds_20251108_211301.json  phase2_all_jtbds_20251108_211301.sql  vital_expert_data.json
database/: ADD_BUDGET_FUNCTIONS.sql  README.md  schema.sql
db/: README.md
docs/: 4_MODES_ARCHITECTURE_DIAGRAM.md  ADMIN_DASHBOARD_ASSESSMENT.md  AGENT_0S_BUSINESS_GUIDE.md  AGENT_0S_VISUAL_GUIDE.md  AGENT_DATA_MODEL.md  AGENT_DATA_MODEL_SCHEMA.json  AGENT_DATA_MODEL_SCHEMA_V2.1.json  AGENT_IMPORT_EXPORT_GUIDE.md  AGENT_REGISTRY_250_IMPLEMENTATION.md  API_DOCUMENTATION.md  API_SECURITY_GUIDELINES.md  ARCHITECTURE.md  ASK_EXPERT_2025_ENHANCEMENTS_IMPLEMENTATION.md  ASK_EXPERT_BACKEND_INTEGRATION.md  AUTHENTICATION.md  (+103 more)
services/ai-engine/src/vital_shared/: README.md  __init__.py  pyproject.toml  setup.py
services/ai-engine/src/vital_shared/interfaces/: __init__.py  agent_service.py  artifact_service.py  memory_service.py  rag_service.py  streaming_service.py  tool_service.py
services/ai-engine/src/vital_shared/models/: __init__.py  agent.py  artifact.py  citation.py  message.py  tool.py  workflow_state.py
services/ai-engine/src/vital_shared/monitoring/: __init__.py  cost_attribution.py  metrics.py  timescale_integration.py
services/ai-engine/src/vital_shared/observability/: __init__.py  langfuse_tracer.py
services/ai-engine/src/vital_shared/registry/: __init__.py  service_registry.py
services/ai-engine/src/vital_shared/services/: __init__.py  agent_service.py  artifact_service.py  memory_service.py  streaming_service.py  tool_service.py  tool_service_stub.py  unified_rag_service.py
services/ai-engine/src/vital_shared/utils/: connection_pool.py  workflow_cache.py
services/ai-engine/src/vital_shared/workflows/: __init__.py  base_workflow.py  parallel_base_workflow.py
services/shared-kernel/: pyproject.toml  setup.py
services/shared-kernel/src/vital_shared_kernel/multi_tenant/: __init__.py  errors.py  tenant_context.py  tenant_id.py
services/shared-kernel/tests/: test_tenant_context.py  test_tenant_id.py
services/vital-ai-services/: .coverage  README.md  pyproject.toml  pytest.ini  setup.py
services/vital-ai-services/src/vital_ai_services/: __init__.py
services/vital-ai-services/src/vital_ai_services/agent/: __init__.py  selector.py
services/vital-ai-services/src/vital_ai_services/core/: __init__.py  exceptions.py  models.py
services/vital-ai-services/src/vital_ai_services/prompt/: __init__.py  composer.py  service.py
services/vital-ai-services/src/vital_ai_services/rag/: __init__.py  cache.py  embedding.py  service.py
services/vital-ai-services/src/vital_ai_services/tools/: __init__.py  base.py  calculator.py  rag_tool.py  registry.py  web_search.py
services/vital-ai-services/tests/: __init__.py  conftest.py  test_prompt_composer.py  test_tool_registry.py
(+12184 files in other folders)
