[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-ai-services"
version = "0.1.0"
description = "Shared AI services library for VITAL platform - Agent, RAG, Tool orchestration"
requires-python = ">=3.11"
authors = [
    {name = "VITAL AI Platform Team"}
]

dependencies = [
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "pinecone-client>=3.0.0",
    "supabase>=2.0.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

